--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<body>
+<body margin="0px">
   <div>
-    <iframe src="detail_footprint.html" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    <iframe src="detail_footprint.html" height="100%" width="100%" frameborder="0" scrolling="no"
+    margin="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0%;left:0px;right:0px;bottom:0px">
     </iframe>
   </div>
 
