--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<body margin="0px">
+<body>
   <div>
-    <iframe src="detail_footprint.html" height="100%" width="100%" frameborder="0" scrolling="no" margin="0">
+    <iframe src="detail_footprint.html" height="100%" width="100%" frameborder="0">
     </iframe>
   </div>
 
