--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-<body margin="0px">
-  <div>
-    <iframe src="detail_footprint.html" height="100%" width="100%" frameborder="0" scrolling="no" margin="0" style="scale:2.0;overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0%;left:0px;right:0px;bottom:0px">
-    </iframe>
-  </div>
-
+<style type="text/css">
+body {
+   margin: 0;
+   overflow: hidden;
+}
+.container{
+    width:50%;
+}
+#iframe1 {
+    position:absolute;
+    left: 0px;
+    min-width: 100%;
+    top: 0px;
+    overflow: auto;
+    min-height: 100%;
+}
+</style>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+    <div class="container">
+<iframe id="iframe1" name="iframe1" frameborder="0"  
+     src="detail_footprint.html"></iframe>
+     </div>  
 </body>
